--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="calc-container">
+        <div class="lcd"></div>
+        <div class="numpad-conatiner">
+            <div class="key ac">AC</div>
+            <div class="key modulo">%</div>
+            <div class="key delete"><</div>
+            <div class="key divide">/</div>
+            <div class="key seven">7</div>
+            <div class="key eight">8</div>
+            <div class="key nine">9</div>
+            <div class="key multiply">x</div>
+            <div class="key four">4</div>
+            <div class="key five">5</div>
+            <div class="key six">6</div>
+            <div class="key subtract">-</div>
+            <div class="key one">1</div>
+            <div class="key two">2</div>
+            <div class="key three">3</div>
+            <div class="key add">+</div>
+            <div class="key zero">0</div>
+            <div class="key negate">+/-</div>
+            <div class="key decimal-point">.</div>
+            <div class="key evaluate">=</div>
+        </div>
+    </div>
 
     <script src="./javascript.js"></script>
 </body>
