Add selectors for keys

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="calc-container">
-        <div class="lcd"></div>
+        <div class="lcd"><h1></h1></div>
         <div class="numpad-conatiner">
             <div class="key ac">AC</div>
             <div class="key modulo">%</div>
-            <div class="key delete"><</div>
+            <div class="key delete">del</div>
             <div class="key divide">/</div>
             <div class="key seven">7</div>
             <div class="key eight">8</div>
