Add op function per Project specification

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="calc-container">
         <div class="lcd"><h1></h1></div>
-        <div class="numpad-conatiner">
+        <div class="numpad-container">
             <div class="key ac">AC</div>
             <div class="key modulo">%</div>
             <div class="key delete">del</div>
